theme overrides remove obsolete make block spacing fix permanent
git-svn-id: https://svn.blender.org/svnroot/bf-manual/trunk/blender_docs@7458 c4de1f47-6596-e411-a384-0024e86c2797

--- a/resources/theme/css/theme_overrides.css
+++ b/resources/theme/css/theme_overrides.css
@@ -79,6 +79,13 @@ input[type="number"], input[type="tel"], input[type="color"] {
 	display: inline;
 }
 
+/* Fix nested block spacing. */
+.rst-content .document dl dt,
+.rst-content dd dl,
+.rst-content dl.field-list dd > p {
+	margin: 0;
+}
+
 /* Without this, paragraphs in bullet points within definition lists have too much vertical padding. */
 .rst-content li > p {
 	margin-bottom: 0px !important;
@@ -203,7 +210,7 @@ a[href^="#fig-"]::after {content: "\201d";}
 
 /* Mark external links. */
 a.external {color:#656AE0;}
-/* White list blender.org as internal. */
+/* List blender.org as internal. */
 .external[href^="https://www.blender.org"], .external[href^="https://docs.blender.org"], .external[href^="https://wiki.blender.org"] {
 	color:#2980B9;
 }
@@ -349,40 +356,3 @@ a.external {color:#656AE0;}
 .genindex-jumpbox {margin-bottom: 1.245em}
 .indextable {margin-bottom: 1.245em}
 /* End genindex consistency. */
-
-/* Start Sphinx 2.0 fixes. */
-.rst-content .admonition > :last-child {margin-bottom: 0}
-.rst-content .document dl dt {
-	display: block;
-	margin: 0;
-	line-height: normal;
-	font-size: 100%;
-	background: transparent !important;
-	color: inherit !important;
-	border: none !important;
-	padding: 0px;
-}
-.rst-content dl.field-list {
-	display: grid;
-	grid-template-columns: minmax(min-content,max-content) auto;
-	column-gap: 20px;
-	row-gap: 5px;
-}
-.rst-content dl.field-list dt {
-	grid-column-start: 1;
-	grid-column-end: 2;
-}
-.rst-content dl.field-list dt:after {
-	content: ":";
-	display: inline;
-}
-.rst-content dl.field-list dd {
-	grid-column-start: 2;
-	grid-column-end: 3;
-	margin: 0;
-	line-height: normal;
-}
-.rst-content dl.field-list dd > p {
-	margin: 0 !important;
-}
-/* End Sphinx 2.0 fixes */
